<resources>
    <string name="app_name">HowLongI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--AboutFragment-->
    <string name="professionTitleDesigner">DESIGNER</string>
    <string name="professionTitleDeveloper">DEVELOPER</string>
    <string name="name_title_designer">PAVEL GNEZDILOV</string>
    <string name="name_title_developer">ARTEM DISENKO</string>
    <string name="developer_url">http://vk.com/a.d.p_69</string>
    <string name="designer_url">http://pghraphics.ru</string>
    <string name="share_string">ESTIMATE</string>
    <string name="share_url">market://details?id=com.disenkoart.howlongi</string>


    <!--Navigation view menu item-->
    <string name="how_long_i_item">HOW LONG I</string>
    <string name="archive_item">ARCHIVE</string>
    <string name="about_item">ABOUT</string>

    <!--DateType-->
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <!--TODO: чтобы сделать локализацию, как надо вспомнить-->
    <string name="minutes_value">minutes</string>
    <string name="hours_value">hours</string>
    <string name="days_value">days</string>
    <string name="months_value">months</string>
    <string name="years_value">years</string>

    <!--TimersView-->
    <string name="start_datetime_string">START TIME</string>
    <string name="timers_view_title">how long i</string>
    <string name="first_hli">USE HOW LONG I</string>
    <string name="timer_share_url">https://play.google.com/store/apps/details?id=com.disenkoart.howlongi</string>
    <string name="title_share_intent">Share record…</string>

    <!--AddTimerFragment-->
    <string name="add_timer_view_how_long_i">HOW LONG I…</string>
    <string name="add_timer_view_date">DATE</string>
    <string name="add_timer_view_time">TIME</string>
    <string name="add_timer_view_color">COLOR</string>
    <string name="add_timer_view_add_button">ADD</string>
    <string name="add_timer_view_change_button">CHANGE</string>
    <string name="is_empty_text_hli">WRITE THE HOW LONG I…</string>

    <string name="undo_button">UNDO</string>
    <string name="undo_title">TIMER IS DELETED</string>

    <string name="archive_is_empty_string">Archive is empty…</string>
    <string name="main_view_is_empty">Add a new timer</string>
</resources>
