<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false"
        android:layout_below="@id/action_bar"
        android:layout_margin="@dimen/horizontal_margin"
        android:focusableInTouchMode="true"
        android:id="@+id/add_timer_fragment_root">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hli_text_layout"
                android:textColorHint="@color/colorHintText"
                app:errorTextAppearance="@style/ErrorText">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_timer_view_how_long_i"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/add_timer_fragment_text_size"
                    android:textColor="@color/colorText"
                    android:id="@+id/add_timer_view_howLongI_edit_text"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_text_layout"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorHintText">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/add_timer_fragment_text_size"
                    android:clickable="true"
                    android:id="@+id/add_timer_view_date_edit_text"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="@string/add_timer_view_date"
                    android:textColor="@color/colorText"
                    android:focusableInTouchMode="false" />
            </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_text_layout"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorHintText">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/add_timer_fragment_text_size"
                android:id="@+id/add_timer_view_time_edit_text"
                android:inputType="time"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/add_timer_view_time"
                android:textColor="@color/colorText"
                android:focusableInTouchMode="false"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_timer_view_color"
                android:id="@+id/add_timer_view_color_title"
                android:textSize="12sp"
                android:layout_marginLeft="6dp"
                android:textColor="@color/colorHintText"/>
            <com.disenkoart.howlongi.customView.gradientsViews.GradientViewGroup
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_height="120dp"
                android:id="@+id/add_timer_view_gradient_view_group"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <com.rey.material.widget.Button
                android:id="@+id/add_timer_view_button_add"
                android:text="@string/add_timer_view_add_button"
                style="@style/ButtonStyle"
                android:layout_gravity="center"/>
            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/colorTopViews"-->
                <!--android:id="@+id/add_timer_view_button_add"-->
                <!--android:text="@string/add_timer_view_add_button"-->
                <!--android:textSize="@dimen/add_timer_fragment_text_size"-->
                <!--android:textColor="@color/colorText"/>-->
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>